--- a/Ejercicio03/estilos02.css
+++ b/Ejercicio03/estilos02.css
@@ -15,7 +15,7 @@ th {
 #modulos {
     border: 1px solid black;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
 }
 
 #recreo {
@@ -27,6 +27,9 @@ th {
 #horas {
     border: 1px solid black;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
     background-color: #9fda9a;
+    font-weight: bold;
 }
