--- a/Ejercicio03/estilos04.css
+++ b/Ejercicio03/estilos04.css
@@ -24,8 +24,13 @@ th,td {
     padding: 20px;
 }
 
-.encabezados {
+.resaltado {
     background-color: #ffffcc;
     color: #610031;
     font-weight: bold;
+}
+
+#fila {
+    padding-left: 25px;
+    padding-right: 25px;
 }
