--- a/Ejercicio04/estilos01.css
+++ b/Ejercicio04/estilos01.css
@@ -5,12 +5,19 @@ body {
     padding: 0px;
 }
 
+span {
+    font-size: 38px;
+    font-style: normal;
+    color: #005a66;
+}
+
 #caption {
     margin: 0px;
     margin-bottom: 5px;
     padding: 0px;
     text-align: center;
     font-size: 32px;
+    font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     color: #005a66;
     white-space: pre;
@@ -25,7 +32,7 @@ body {
     margin-right: 5px;
     padding: 5px;
     float: left;
-    border: 2px #005a66 dashed;
+    border: 3px #005a66 dashed;
     font-style: italic;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -39,9 +46,8 @@ body {
     margin-right: 5px;
     padding: 5px;
     float: left;
-    border: 2px #005a66 dashed;
+    border: 3px #005a66 dashed;
     clear: both;
     font-style: italic;
     font-family: Arial, Helvetica, sans-serif;
 }
-
