--- a/Ejercicio04/estilos02.css
+++ b/Ejercicio04/estilos02.css
@@ -1,4 +1,24 @@
 body {
     background-color: #997366;
     margin: 0px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 10px;
+}
+
+#introduccion {
+    background-color: #9D847B;
+    width: 100%;
+    height: 20%;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#titulo {
+    margin-top: 0px;
+    text-align: center;
+}
+
+#bio {
+    text-align: justify;
 }
