--- a/Ejercicio04/estilos02.css
+++ b/Ejercicio04/estilos02.css
@@ -31,7 +31,7 @@ div#introduccion p {
 #marco {
     border: 1px solid white;
     width: 95%;
-    height: 500px;
+    height: 540px;
     margin: 0px auto;
     padding-top: 8px;
 }
@@ -41,6 +41,7 @@ div#introduccion p {
     width: 98%;
     height: 250px;
     margin: 0px auto;
+    margin-bottom: 10px;
     padding: 0px;
 }
 
@@ -57,7 +58,7 @@ div#capitalismo div h1 {
 #parrafos {
     border: 5px solid #422b24;
     width: 80%;
-    height: 40px;
+    height: 50px;
     margin: 0px auto;
     margin-top: 10px;
     color: white;
