--- a/Ejercicio04/estilos03 - copia.css
+++ b/Ejercicio04/estilos03 - copia.css
@@ -35,6 +35,7 @@ p {
 div#naranja {
     background-color: #FFA666;
     width: 95%;
+    /*height: 175px;*/
     margin: 0px auto;
     margin: 10px 50px;
     border: 2px solid #CC4400;
@@ -44,6 +45,7 @@ div#naranja {
 div#rosa {
     background-color: #FFCCFF;
     width: 95%;
+    /*height: 175px;*/
     margin: 0px auto;
     margin: 10px 50px;
     border: 2px solid #E600E6;
