--- a/Ejercicio08/main.css
+++ b/Ejercicio08/main.css
@@ -61,3 +61,13 @@ body {
     text-align: center;
     border-top: 2px solid #999999;
 }
+
+#article {
+    background-color: #FFBBCC;
+    border: 1px solid #999999;
+    padding: 20px;
+}
+
+#footer {
+    text-align: center;
+}
