--- a/Ejercicio08/main.css
+++ b/Ejercicio08/main.css
@@ -62,12 +62,12 @@ body {
     border-top: 2px solid #999999;
 }
 
-#article {
+article {
     background-color: #FFBBCC;
     border: 1px solid #999999;
     padding: 20px;
 }
 
-#footer {
+footer {
     text-align: center;
 }
