--- a/Ejercicio08/estilos.css
+++ b/Ejercicio08/estilos.css
@@ -86,7 +86,7 @@ article p {
 
 #relleno {
     background: #C98258;
-    height: 150px;
+    height: 300px;
     border-radius: 13px;;
 }
 
@@ -99,4 +99,24 @@ article p {
     background: #C4BACF;
     width: 35%;
     margin-left: 30px;
+    padding: 0px;
+}
+
+#derecha header {
+    border: 1px solid #9D94A8;
+    border-radius: 3px;
+}
+
+#derecha img {
+    padding: 5px;
+}
+
+#derecha h3 {
+    padding: 5px;
+}
+
+#encabezado {
+    background: #BAB0C5;
+    border-bottom: 1px solid #9D94A8;
+    border-radius: 3px;
 }
